--- a/app/src/main/res/anim/translation_z.xml
+++ b/app/src/main/res/anim/translation_z.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:state_pressed="true">
+    <objectAnimator
+        android:duration="@android:integer/config_shortAnimTime"
+        android:propertyName="translationZ"
+        android:state_enabled="true"
+        android:state_pressed="true"
+        android:valueTo="4dp"
+        android:valueType="floatType" />
 
-        <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
-            android:propertyName="translationZ"
-            android:valueTo="4dp"
-            android:valueType="floatType" />
-    </item>
 
-    <item>
-        <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
-            android:propertyName="translationZ"
-            android:valueTo="0dp"
-            android:valueType="floatType" />
-    </item>
+    <objectAnimator
+        android:duration="@android:integer/config_shortAnimTime"
+        android:propertyName="translationZ"
+        android:valueTo="0dp"
+        android:valueType="floatType" />
+
 </set>
