floating icon service

--- a/app/src/main/res/layout/adapter_users.xml
+++ b/app/src/main/res/layout/adapter_users.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:stateListAnimator="@anim/translation_z"
-    android:elevation="@dimen/base_elevation">
+    android:stateListAnimator="@animator/translation_z"
+    android:elevation="@dimen/base_elevation"
+    tools:ignore="Overdraw">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
