--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="big_circle_image">160dp</dimen>
     <dimen name="little_circle_image">64dp</dimen>
     <dimen name="icon_trash">48dp</dimen>
+    <dimen name="icon_trash_margin_bottom">80dp</dimen>
     <dimen name="base_elevation">2dp</dimen>
     <dimen name="item_padding">24dp</dimen>
 
