--- a/app/src/main/res/drawable/icon_close.xml
+++ b/app/src/main/res/drawable/icon_close.xml
@@ -3,5 +3,7 @@
     android:height="32dp"
     android:viewportHeight="475.2"
     android:viewportWidth="475.2">
-      <path android:fillColor="#FFFFFF" android:pathData="M342.3,132.9c-5.3,-5.3 -13.8,-5.3 -19.1,0l-85.6,85.6L152,132.9c-5.3,-5.3 -13.8,-5.3 -19.1,0c-5.3,5.3 -5.3,13.8 0,19.1l85.6,85.6l-85.6,85.6c-5.3,5.3 -5.3,13.8 0,19.1c2.6,2.6 6.1,4 9.5,4s6.9,-1.3 9.5,-4l85.6,-85.6l85.6,85.6c2.6,2.6 6.1,4 9.5,4c3.5,0 6.9,-1.3 9.5,-4c5.3,-5.3 5.3,-13.8 0,-19.1l-85.4,-85.6l85.6,-85.6C347.6,146.7 347.6,138.2 342.3,132.9z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M342.3,132.9c-5.3,-5.3 -13.8,-5.3 -19.1,0l-85.6,85.6L152,132.9c-5.3,-5.3 -13.8,-5.3 -19.1,0c-5.3,5.3 -5.3,13.8 0,19.1l85.6,85.6l-85.6,85.6c-5.3,5.3 -5.3,13.8 0,19.1c2.6,2.6 6.1,4 9.5,4s6.9,-1.3 9.5,-4l85.6,-85.6l85.6,85.6c2.6,2.6 6.1,4 9.5,4c3.5,0 6.9,-1.3 9.5,-4c5.3,-5.3 5.3,-13.8 0,-19.1l-85.4,-85.6l85.6,-85.6C347.6,146.7 347.6,138.2 342.3,132.9z" />
 </vector>
