--- a/app/src/main/res/drawable/icon_link.xml
+++ b/app/src/main/res/drawable/icon_link.xml
@@ -1,5 +1,12 @@
-<vector android:height="24dp" android:viewportHeight="64.0"
-    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#4078c0" android:pathData="M56.17,10.52C55.71,8.81 54.62,7.39 53.09,6.5l-9.73,-5.62c-1.53,-0.88 -3.31,-1.12 -5.02,-0.66c-1.71,0.46 -3.13,1.55 -4.02,3.08L21.97,24.71c-0.88,1.53 -1.12,3.31 -0.66,5.02c0.46,1.71 1.55,3.13 3.08,4.02l7.57,4.37c0.16,0.09 0.33,0.13 0.5,0.13c0.35,0 0.68,-0.18 0.87,-0.5c0.28,-0.48 0.11,-1.09 -0.37,-1.37l-7.57,-4.37c-1.07,-0.62 -1.83,-1.61 -2.15,-2.8c-0.32,-1.19 -0.16,-2.43 0.46,-3.5L36.05,4.31c0.62,-1.07 1.61,-1.83 2.8,-2.15c1.19,-0.32 2.44,-0.16 3.5,0.46l9.73,5.62c1.07,0.62 1.83,1.61 2.15,2.8c0.32,1.19 0.16,2.44 -0.46,3.5l-6.37,11.02c-0.28,0.48 -0.11,1.09 0.37,1.37c0.48,0.28 1.09,0.11 1.37,-0.37l6.37,-11.02C56.39,14.01 56.63,12.23 56.17,10.52z"/>
-    <path android:fillColor="#4078c0" android:pathData="M39.61,30.25l-8.87,-5.12c-0.48,-0.28 -1.09,-0.11 -1.37,0.37c-0.28,0.48 -0.11,1.09 0.37,1.37l8.87,5.12c2.2,1.27 2.96,4.1 1.69,6.31L27.94,59.69c-0.62,1.07 -1.61,1.83 -2.8,2.15c-1.19,0.32 -2.43,0.16 -3.5,-0.46l-9.73,-5.62c-2.2,-1.27 -2.96,-4.1 -1.69,-6.31l6.37,-11.02c0.28,-0.48 0.11,-1.09 -0.37,-1.37c-0.48,-0.28 -1.09,-0.11 -1.37,0.37L8.49,48.46c-1.82,3.16 -0.74,7.21 2.42,9.04l9.73,5.62c1.02,0.59 2.15,0.89 3.3,0.89c0.58,0 1.15,-0.08 1.72,-0.23c1.71,-0.46 3.13,-1.55 4.02,-3.08L42.03,39.29C43.85,36.13 42.77,32.08 39.61,30.25z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="64.0"
+    android:viewportWidth="64.0">
+    <path
+        android:fillColor="#4078c0"
+        android:pathData="M56.17,10.52C55.71,8.81 54.62,7.39 53.09,6.5l-9.73,-5.62c-1.53,-0.88 -3.31,-1.12 -5.02,-0.66c-1.71,0.46 -3.13,1.55 -4.02,3.08L21.97,24.71c-0.88,1.53 -1.12,3.31 -0.66,5.02c0.46,1.71 1.55,3.13 3.08,4.02l7.57,4.37c0.16,0.09 0.33,0.13 0.5,0.13c0.35,0 0.68,-0.18 0.87,-0.5c0.28,-0.48 0.11,-1.09 -0.37,-1.37l-7.57,-4.37c-1.07,-0.62 -1.83,-1.61 -2.15,-2.8c-0.32,-1.19 -0.16,-2.43 0.46,-3.5L36.05,4.31c0.62,-1.07 1.61,-1.83 2.8,-2.15c1.19,-0.32 2.44,-0.16 3.5,0.46l9.73,5.62c1.07,0.62 1.83,1.61 2.15,2.8c0.32,1.19 0.16,2.44 -0.46,3.5l-6.37,11.02c-0.28,0.48 -0.11,1.09 0.37,1.37c0.48,0.28 1.09,0.11 1.37,-0.37l6.37,-11.02C56.39,14.01 56.63,12.23 56.17,10.52z" />
+    <path
+        android:fillColor="#4078c0"
+        android:pathData="M39.61,30.25l-8.87,-5.12c-0.48,-0.28 -1.09,-0.11 -1.37,0.37c-0.28,0.48 -0.11,1.09 0.37,1.37l8.87,5.12c2.2,1.27 2.96,4.1 1.69,6.31L27.94,59.69c-0.62,1.07 -1.61,1.83 -2.8,2.15c-1.19,0.32 -2.43,0.16 -3.5,-0.46l-9.73,-5.62c-2.2,-1.27 -2.96,-4.1 -1.69,-6.31l6.37,-11.02c0.28,-0.48 0.11,-1.09 -0.37,-1.37c-0.48,-0.28 -1.09,-0.11 -1.37,0.37L8.49,48.46c-1.82,3.16 -0.74,7.21 2.42,9.04l9.73,5.62c1.02,0.59 2.15,0.89 3.3,0.89c0.58,0 1.15,-0.08 1.72,-0.23c1.71,-0.46 3.13,-1.55 4.02,-3.08L42.03,39.29C43.85,36.13 42.77,32.08 39.61,30.25z" />
 </vector>
