--- a/app/src/main/res/anim/alpha_translation_in.xml
+++ b/app/src/main/res/anim/alpha_translation_in.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="800">
+    android:duration="800"
+    android:fillAfter="true">
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0" />
     <translate
         android:fromYDelta="100"
-        android:toYDelta="0"
-        android:fillAfter="true" />
+        android:toYDelta="0" />
 </set>
