--- a/app/src/main/res/layout/adapter_all_users.xml
+++ b/app/src/main/res/layout/adapter_all_users.xml
@@ -7,11 +7,10 @@
     android:background="@android:color/white"
     android:elevation="@dimen/elevation_base"
     android:stateListAnimator="@animator/translation_z"
-    android:visibility="invisible"
     tools:ignore="Overdraw">
 
     <ImageView
-        android:id="@+id/avatar"
+        android:id="@+id/iv_avatar"
         android:layout_width="@dimen/image_circle_normal"
         android:layout_height="@dimen/image_circle_normal"
         android:layout_marginEnd="8dp"
@@ -20,7 +19,7 @@
         android:contentDescription="@string/user_avatar"
         android:src="@mipmap/ic_launcher"
         android:transitionName="icon"
-        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintBottom_toTopOf="@+id/iv_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
@@ -29,7 +28,7 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:id="@+id/login"
+        android:id="@+id/iv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_large"
@@ -42,6 +41,6 @@
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
 
 </android.support.constraint.ConstraintLayout>
